# hics

./: .gitignore  CHANGELOG.md  LICENSE  README.md  noxfile.py  pyproject.toml
.github/workflows/: pypi-publish.yml
resource/: nlcdclasses.csv
src/hics/: __init__.py  config.py  datatypes.py  hics.py  plotting.py  units.py  utils.py
src/hics/geo/: __init__.py  config.py  crs.py  dem.py  downloader.py  geoplotting.py  geoutils.py  scenarios.py  setup_assets.py  tle.py  transforms.py
tests/: test_downloader.py  test_hics.py  test_plotting.py  test_regression.py  test_save.py  test_scenarios.py  test_utils.py
tests/testdata/: drive_gp.nc  racetrack_gp.nc  rotatedhierarch.nc
